--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <img src="" class="weather-icon" alt="Weather Icon">
             <h1 class="temp">22°c</h1>
             <h2 class="city">Novosibirsk</h2>
+            <h3 class="feelslike">Feels like</h3>
             <div class="details">
                 <div class="col">
                     <img src="images/humidity.png">
