--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="card">
         <div class="image-overlay"></div>
         <div class="search">
-            <input type="text" placeholder="Enter city name" spellcheck="false">
+            <input type="text" placeholder="Search for a city here" spellcheck="false">
             <button><img src="images/search.png" alt=""></button>
         </div>
         <div class="weather">
