added sugestions list of cities and styled it

--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 <body>
     <div class="card">
         <div class="image-overlay"></div>
+        <div class="suggestions-overlay"></div>
         <div class="search">
             <input type="text" placeholder="Search for a city here" spellcheck="false">
             <button><img src="images/search.png" alt=""></button>
+            <ul class="suggestion-list"></ul>
         </div>
         <div class="weather">
             <img src="" class="weather-icon" alt="Weather Icon">
@@ -35,6 +37,7 @@
                 </div>
             </div>
         </div>
+        <div class="dialog-box"></div>
     </div>
 
     <!-- Add the ColorThief library -->
