changes to search button

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="suggestions-overlay"></div>
         <div class="search">
             <input type="text" placeholder="Search for a city here" spellcheck="false">
-            <button><img src="images/search.png" alt=""></button>
+            <button><img src="" alt=""></button>
             <ul class="suggestion-list"></ul>
         </div>
         <div class="weather">
