--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <h1 class="temp">22°c</h1>
             <h2 class="city">Novosibirsk</h2>
             <h3 class="feelslike">Feels like</h3>
+            <h4 class="localdate">Local date and time</h4>
             <div class="details">
                 <div class="col">
                     <img src="images/humidity.png">
